--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <section class="hero">
             <div class="content">
-                <img class="my-picture" src="images/STUDIO_TSLWOODYJESSIE_20181021_413918003400.jpg" alt="This is a picture of me">
+                <img class="my-picture" src="/images/Finncollage" alt="This is a picture of me">
                 <p class="my-name">Timothy J. Mahoney</p>
                 <p class="my-location">Middlesex, NJ</p>
             </div>
