--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     </head>
-<div>
+
 <body>
 <p> Timothy J Mahoney
 <br>
 Middlesex, NJ</p>
-    </div>
+    
 <header>      
   <p id="img_cont">
     <img src="Image/finncamo.jpg" alt="Finncamo">
@@ -31,9 +31,9 @@ Middlesex, NJ</p>
   
     <ul>
      <li> My Contact Info</li>
-      <li <a href='https://www.linkedin.com/in/timothy-mahoney-85bb4b173?trk=profile-badge'>Linked In</a></li>
+      <li> <a href='https://www.linkedin.com/in/timothy-mahoney-85bb4b173?trk=profile-badge'>Linked In</a></li>
        <a class="github-button" href="https://github.com/timmahoney2000" aria-label="Follow @timmahoney2000 on GitHub">Github</a>
-      <li <a href="https://twitter.com/timmahoney2000?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @timmahoney2000</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <li> <a href="https://twitter.com/timmahoney2000?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @timmahoney2000</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </ul>
   </nav>
   <article>
