--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Middlesex, NJ</p>
      <li> My Contact Info</li>
       <li> <a href='https://www.linkedin.com/in/timothy-mahoney-85bb4b173?trk=profile-badge'>Linked In</a></li>
        <a class="github-button" href="https://github.com/timmahoney2000" aria-label="Follow @timmahoney2000 on GitHub">Github</a>
-      <li> <a href="https://twitter.com/timmahoney2000?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @timmahoney2000</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <li> <a href="https://twitter.com/timmahoney2000?ref_src=twsrc%5Etfw" 
     </ul>
   </nav>
   <article>
