--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Middlesex, NJ</p>
   </article>
 </section>
 <footer>
-  <p>Tim Mahoney &#169; </p>
+  Tim Mahoney &#169;
 </footer>
     
     </html>
