--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ Middlesex, NJ</p>
   </body>
     <ul>
      <li> My Contact Info</li>
-      <li> <a href='https://www.linkedin.com/in/timothy-mahoney-85bb4b173?trk=profile-badge'>Linked In</a></li>
-       <a class="github-button" href="https://github.com/timmahoney2000" aria-label="Follow @timmahoney2000 on GitHub">Github</a>
+      <li> <a href='https://www.linkedin.com/in/timothy-mahoney-85bb4b173?trk=profile-badge'>#0077b5</a></li>
+<li> <a class="github-button" href="https://github.com/timmahoney2000" aria-label="Follow @timmahoney2000 on GitHub">Github</a>
     </ul>
   </nav>
   <article>
