--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <title> Project 3</title>
-<body style="background-image: url('Finn-collage-small');">
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
@@ -13,7 +12,7 @@
         <section class="hero">
 
             <div class="content">
-                <img class="my-picture" src="Images/Universal-small.jpg" alt="This is a picture of me">
+                <img class="my-picture" src="Image/Universal-small.jpg" alt="This is a picture of me">
                 <p class="my-name">Timothy J. Mahoney</p>
                 <p class="my-location">Middlesex, NJ</p>
             </div>
@@ -34,9 +33,9 @@
                 <br>
                 
             <div class="content">    
-        <img class="butterfly" src= "/Images/butterfly-small.jpg" alt="Finn with a butterfly"> 
-               <img class="shades" src= "/Images/shades-small.jpg" alt="Finn in cool sunglasses">
-               <img class="camo" src= "/Images/camo-small.jpg" alt="Finn readying for a nerf war">
+        <img class="butterfly" src= "/Image/butterfly-small.jpg" alt="Finn with a butterfly"> 
+               <img class="shades" src= "/Image/shades-small.jpg" alt="Finn in cool sunglasses">
+               <img class="camo" src= "/Image/camo-small.jpg" alt="Finn readying for a nerf war">
                 </div>
                
      <div class="footer">
