--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
                <figure> 
                
                 <figcaption> "Finn catching a butterfly"
-        <img class="butterfly" src= "/Image/butterfly-small.jpg" alt="Finn with a butterfly"> 
+        <img class="butterfly" src= "butterfly-small.jpg" alt="Finn with a butterfly"> 
                    </figcaption>
                 <hr>
                    <figcaption> "Finn looking cool in new shades"
-               <img class="shades" src= "/Image/shades-small.jpg" alt="Finn in cool sunglasses">
+               <img class="shades" src= "shades-small.jpg" alt="Finn in cool sunglasses">
                    </figcaption>
                    
                 <hr>
                    <figcaption>  "Finn getting ready for his nerf war b-day party"
-               <img class="camo" src= "/Image/camo-small.jpg" alt="Finn readying for a nerf war">
+               <img class="camo" src= "camo-small.jpg" alt="Finn readying for a nerf war">
                    </figcaption>
         </figure>
         </section>
