--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="hero">
 
             <div class="content">
-                <img class="my-picture" src="/Image/Universal-small.jpg" alt="This is a picture of me">
+                <img class="my-picture" src="/Images/Universal-small.jpg" alt="This is a picture of me">
                 <p class="my-name">Timothy J. Mahoney</p>
                 <p class="my-location">Middlesex, NJ</p>
             </div>
