--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="my-name">Timothy J. Mahoney</p>
                 <p class="my-location">Middlesex, NJ</p>
             </div>
-   
+            </section>
         <section class="about-me">
             <div class="content">
                 <div class="about-content">
@@ -40,11 +40,13 @@
                    </figcaption>
             </figure>
                 <hr>
+            <figure>
                    <figcaption> "Finn looking cool in new shades"
                <img class="shades" src= "shades-small.jpg" alt="Finn in cool sunglasses">
                    </figcaption>
             </figure>
                 <hr>
+            <figure>
                    <figcaption>  "Finn getting ready for his nerf war b-day party"
                <img class="camo" src= "camo-small.jpg" alt="Finn readying for a nerf war">
                    </figcaption>
@@ -52,11 +54,11 @@
         </section>
      <div class="footer">
   <p>Tim Mahoney &#169; 
-         
-         </p>
+    </div>
+       
    
-     </section>
     </main>
+
        </body>
 
          </html>
